--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,7 +29,7 @@
         <div class="max-w-[960px] flex-1">
           <div class="w-32 h-32 bg-gray-300 rounded-full mx-auto mb-4 fade-in"></div>
           <h1 class="text-[#111418] text-[32px] font-bold pb-3 pt-6 fade-in">
-            Hi, I'm <span id="typed-name"></span>
+            Hi, I'm Thien Lu<span id="typed-name"></span>
           </h1>
           <p class="text-[#637588] text-sm fade-in">UI/UX Designer</p>
           <p class="text-[#111418] text-base fade-in">
