--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,7 +34,7 @@
         <div class="w-32 h-32 bg-gray-300 rounded-full mx-auto mb-4 fade-in"></div>
         <!-- Name and Title -->
         <h1 class="text-[#111418] text-[32px] font-bold pb-3 pt-6 fade-in">
-          Hi, I'm Thien Lu<span id="typed-name"></span>
+          Hi, I'm Thien Lu
         </h1>
         <p class="text-[#637588] text-sm fade-in">UI/UX Designer</p>
         <!-- About Me -->
@@ -44,8 +44,8 @@
         <!-- Recent Work -->
         <h2 class="text-[#111418] text-[22px] font-bold pb-3 pt-5 fade-in">Recent Work</h2>
         <div class="grid grid-cols-2 gap-3 p-4 fade-in">
-          <img src="images/project1.jpg" alt="Project 1" class="w-full rounded-xl object-cover"/>
-          <img src="images/project2.jpg" alt="Project 2" class="w-full rounded-xl object-cover"/>
+          <img src="images/project1.jpg" alt="Project 1" class="w-full rounded-xl object-cover cursor-pointer" onclick="showPopup('Project 1')"/>
+          <img src="images/project2.jpg" alt="Project 2" class="w-full rounded-xl object-cover cursor-pointer" onclick="showPopup('Project 2')"/>
         </div>
         <!-- Contact Form -->
         <h2 class="text-[#111418] text-[22px] font-bold pb-3 pt-5 fade-in">Get in touch</h2>
@@ -65,13 +65,6 @@
             <button onclick="closePopup()" class="mt-3 px-4 py-2 bg-blue-600 text-white rounded-xl">OK</button>
           </div>
         </div>
-        <!-- Dynamic API URL -->
-        <script>
-          const API_URL =
-            window.location.hostname === "localhost" || window.location.hostname === "127.0.0.1"
-              ? "http://localhost:5000/send" // Local development
-              : "/send"; // Vercel deployment
-        </script>
         <!-- Script for Form Handling -->
         <script src="script.js" defer></script>
         <!-- Social Links -->
